[package]
name = "web3_rust_wrapper"
version = "0.2.8"
edition = "2018"
license = "MIT"
description = "web3_rust_wrapper"
keywords = ["macro", "match"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
secp256k1 = { version = "0.21", features = ["rand"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.19"
open = "2.0.2"
colored = "2.0.0"
sysinfo = "0.23.0"
sha256 = "1.0.3"
clearscreen = "1.0.9"
chrono = "0.4.19"
thiserror = "1.0.30"
hex-literal = "0.3.4"
lazy_static = "1.4.0"

[dev-dependencies]
dotenv = "0.15.0"
